# mdreader

./: .gitignore  README.md  environment.yml  example.md  pyproject.toml
mdreader/: __init__.py  main.py  renderer.py  viewer.py
mdreader/resources/: template.html
