[project]
name = "mdreader"
version = "0.1.1"
description = "A lightweight Markdown viewer with LaTeX equation rendering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyside6",
    "markdown-it-py",
    "mdit-py-plugins",
    "watchdog",
]

[project.scripts]
mdreader = "mdreader.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]